[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/camera.gd" type="Script" id=1]
[ext_resource path="res://scenes/CameraArea.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 111.5, 22 )

[node name="Camera" type="Camera2D"]
current = true
script = ExtResource( 1 )

[node name="ActionPanel" type="CanvasLayer" parent="."]

[node name="RecenterButton" type="Button" parent="ActionPanel"]
margin_left = 50.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 45.0
text = "]["

[node name="HandButton" type="Button" parent="ActionPanel"]
margin_left = 95.0
margin_top = 5.0
margin_right = 135.0
margin_bottom = 45.0
text = "H"

[node name="ZoomIn" type="Button" parent="ActionPanel"]
margin_left = 185.0
margin_top = 5.0
margin_right = 225.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 20, 20 )
text = "+"

[node name="ZoomOut" type="Button" parent="ActionPanel"]
margin_left = 140.0
margin_top = 5.0
margin_right = 180.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 20, 20 )
text = "-"

[node name="ActionButtonMenu" type="Button" parent="ActionPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 45.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 62, 20 )
text = "..."

[node name="AboutPopup" type="Popup" parent="ActionPanel/ActionButtonMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -160.0
margin_right = 192.0
margin_bottom = 160.0
popup_exclusive = true

[node name="AboutBackground" type="ColorRect" parent="ActionPanel/ActionButtonMenu/AboutPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -160.0
margin_right = 192.0
margin_bottom = 160.0
color = Color( 0.466667, 0.466667, 0.466667, 1 )

[node name="AboutLabel" type="Label" parent="ActionPanel/ActionButtonMenu/AboutPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -136.0
margin_right = 176.0
margin_bottom = 136.0
text = "Testing"

[node name="CloseAboutMenu" type="Button" parent="ActionPanel/ActionButtonMenu/AboutPopup"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -20.0
margin_bottom = 24.0
text = "X"

[node name="ActionMenu" type="PopupMenu" parent="ActionPanel/ActionButtonMenu"]
margin_right = 20.0
margin_bottom = 20.0

[node name="CameraArea" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CameraShape" type="CollisionShape2D" parent="CameraArea"]
position = Vector2( 115.5, 26 )
shape = SubResource( 1 )

[connection signal="pressed" from="ActionPanel/RecenterButton" to="." method="_on_recenter_button_pressed"]
[connection signal="pressed" from="ActionPanel/HandButton" to="." method="_on_HandButton_pressed"]
[connection signal="button_down" from="ActionPanel/ZoomIn" to="." method="_on_move_button_down" binds= [ "zoom_in" ]]
[connection signal="button_up" from="ActionPanel/ZoomIn" to="." method="_on_move_button_up"]
[connection signal="button_down" from="ActionPanel/ZoomOut" to="." method="_on_move_button_down" binds= [ "zoom_out" ]]
[connection signal="button_up" from="ActionPanel/ZoomOut" to="." method="_on_move_button_up"]
[connection signal="pressed" from="ActionPanel/ActionButtonMenu" to="." method="_on_ActionButtonMenu_pressed"]
